--- a/gold-admin-frontend/src/styles.scss
+++ b/gold-admin-frontend/src/styles.scss
@@ -517,3 +517,10 @@ mat-header-row {
 	line-height: 0;
 	min-width: 0;
 }
+
+// image-action
+.pos-action {
+	position: absolute;
+	top     : 5px;
+	right   : 10px;
+}
