--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/loan-application-form.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/loan-application-form.component.scss
@@ -3,4 +3,8 @@
         min-width: 130px !important;
         padding: 0 !important;
     }
+    .packets-height{
+        min-height: 50vh!important;
+
+    }
 }
