--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-calculator/tabs/final-interest-amount/final-interest-amount.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-calculator/tabs/final-interest-amount/final-interest-amount.component.html
@@ -1,24 +1,31 @@
 <div class="container minHeight">
     <form [formGroup]="finalInterestForm">
 
+
+
         <div class="row kt-margin-b-20">
             <div class="col-6">
+
                 <div class="row">
                     <div class="col-4 form-label">
-                        <label class="mandatory">Start Date</label>
+                        <label class="mandatory">Loan Amount</label>
                     </div>
                     <div class="col-7">
-                        <input type="text" class="form-control" [matDatepicker]="picker" (click)="picker.open()"
-                            formControlName="loanStartDate" [min]="currentDate"
-                            [class.isError]="controls.loanStartDate.touched && controls.loanStartDate.invalid"
-                            placeholder="4/5/2020" readonly (dateChange)="setEndDate()">
-                        <mat-datepicker #picker></mat-datepicker>
-                        <mat-error *ngIf="controls.loanStartDate.errors?.required && controls.loanStartDate.touched">
+                        <input type="number" class="form-control" formControlName="finalLoanAmount"
+                            placeholder="0,00,000"
+                            [class.isError]="controls.finalLoanAmount.touched && controls.finalLoanAmount.invalid" />
+                        <mat-error
+                            *ngIf="controls.finalLoanAmount.errors?.required && controls.finalLoanAmount.touched">
                             Required field
                         </mat-error>
+                        <mat-error *ngIf="controls.finalLoanAmount.errors?.pattern && controls.finalLoanAmount.touched">
+                            Invalid
+                        </mat-error>
+                        <mat-error *ngIf="controls.finalLoanAmount.errors?.invalidAmt">Enter Valid Amount</mat-error>
                     </div>
                 </div>
             </div>
+
             <div class="col-6">
 
                 <div class="row">
@@ -41,6 +48,23 @@
 
         <div class="row kt-margin-b-20">
             <div class="col-6">
+                <div class="row">
+                    <div class="col-4 form-label">
+                        <label class="mandatory">Start Date</label>
+                    </div>
+                    <div class="col-7">
+                        <input type="text" class="form-control" [matDatepicker]="picker" (click)="picker.open()"
+                            formControlName="loanStartDate" [min]="currentDate"
+                            [class.isError]="controls.loanStartDate.touched && controls.loanStartDate.invalid"
+                            placeholder="4/5/2020" readonly (dateChange)="setEndDate()">
+                        <mat-datepicker #picker></mat-datepicker>
+                        <mat-error *ngIf="controls.loanStartDate.errors?.required && controls.loanStartDate.touched">
+                            Required field
+                        </mat-error>
+                    </div>
+                </div>
+            </div>
+            <div class="col-6">
 
                 <div class="row">
                     <div class="col-4 form-label">
@@ -57,27 +81,6 @@
                     </div>
                 </div>
             </div>
-            <div class="col-6">
-
-                <div class="row">
-                    <div class="col-4 form-label">
-                        <label class="mandatory">Loan Amount</label>
-                    </div>
-                    <div class="col-7">
-                        <input type="number" class="form-control" formControlName="finalLoanAmount"
-                            placeholder="0,00,000"
-                            [class.isError]="controls.finalLoanAmount.touched && controls.finalLoanAmount.invalid" />
-                        <mat-error
-                            *ngIf="controls.finalLoanAmount.errors?.required && controls.finalLoanAmount.touched">
-                            Required field
-                        </mat-error>
-                        <mat-error *ngIf="controls.finalLoanAmount.errors?.pattern && controls.finalLoanAmount.touched">
-                            Invalid
-                        </mat-error>
-                        <mat-error *ngIf="controls.finalLoanAmount.errors?.invalidAmt">Enter Valid Amount</mat-error>
-                    </div>
-                </div>
-            </div>
         </div>
 
         <div class="row kt-margin-b-20">
@@ -88,10 +91,11 @@
                         <label class="mandatory">Interest Rest Days</label>
                     </div>
                     <div class="col-7">
-                        <select class="form-control" formControlName="paymentFrequency"
+                        <select formControlName="paymentFrequency" class="form-control" (change)="getIntrest()"
                             [class.isError]="controls.paymentFrequency.touched && controls.paymentFrequency.invalid">
-                            <option value="" [selected]="true" [disabled]="true">Select Repay Period</option>
-                            <option [value]="pay.value" *ngFor="let pay of repayType">{{pay.name | titlecase}}</option>
+                            <option value="" [selected]="true" [disabled]="true">Select Payment Frequency</option>
+                            <option [value]="repay.value" *ngFor="let repay of repayType">{{repay.name | titlecase}}
+                            </option>
                         </select>
                         <mat-error
                             *ngIf="controls.paymentFrequency.errors?.required && controls.paymentFrequency.touched">
@@ -100,6 +104,10 @@
                     </div>
                 </div>
             </div>
+        </div>
+
+        <div class="row kt-margin-b-20">
+
             <div class="col-6">
                 <div class="row">
                     <div class="col-4 form-label">
@@ -119,26 +127,10 @@
             </div>
         </div>
 
-        <div class="row kt-margin-b-20">
-            <div class="col-6">
-                <div class="row">
-                    <div class="col-4 form-label">
-                        <label class ="mandatory">Gold Net Weight</label>
-                    </div>
-                    <div class="col-7">
-                        <input class="form-control" formControlName="goldNetWeight" placeholder="0.00 gram" />
-                    </div>
-                </div>
-            </div>
-            <div class="col-6">
-                <div class="row">
-                    <div class="col-4 form-label">
-                        <label class ="mandatory">Final Net weight</label>
-                    </div>
-                    <div class="col-7">
-                        <input class="form-control" formControlName="finalNetWeight" placeholder="0.00 gram" />
-                    </div>
-                </div>
+        <div class="col-6 kt-margin-t-30 kt-margin-b-30">
+
+            <div class="offset-4 col">
+                <kt-button [value]="'Calculate'" [type]="'button'" (action)="calcInterestAmount()"></kt-button>
             </div>
         </div>
 
@@ -176,11 +168,11 @@
                 </div>
             </div>
         </div> -->
-        <div class="row">
+        <!-- <div class="row">
             <div class="col-6">
-            <div class="row">
+                <div class="row">
                     <div class="col-4 form-label">
-                        <label class ="mandatory">Current LTV Amount</label>
+                        <label class="mandatory">Current LTV Amount</label>
                     </div>
                     <div class="col-7">
                         <input class="form-control" formControlName="currentLtvAmount" placeholder="0,00,000" />
@@ -188,13 +180,8 @@
                 </div>
             </div>
 
-            <div class="col-6 kt-margin-t-30 kt-margin-b-30">
 
-                <div class="offset-4 col">
-                    <kt-button [value]="'Calculate'" [type]="'button'" (action)="calcInterestAmount()"></kt-button>
-                </div>
-            </div>
-        </div>
+        </div> -->
     </form>
     <div class="row justify-content-center kt-margin-b-20" *ngIf="dateOfPayment.length > 0">
         <div class="col-6">
@@ -213,10 +200,16 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr *ngFor="let date of dateOfPayment;index as idx">
-                                    <td>{{date | date :'mediumDate'}}</td>
-                                    <td [attr.rowspan]="colJoin" *ngIf="idx%colJoin == 0 || colJoin == null">
-                                        {{intrestAmount | currency : 'INR'}}</td>
+                                <tr *ngFor="let date of dateOfPayment;index as idx; last as last">
+                                    <td>{{date.key | date :'mediumDate'}}</td>
+                                    <td [attr.rowspan]="colJoin" *ngIf="(idx%colJoin == 0 || colJoin == null)">
+                                        {{intrestAmount | currency : 'INR'}}1</td>
+                                    <ng-template *ngIf="colJoin>idx">
+                                        <td *ngIf="(idx%colJoin == 0 ) ">
+                                            {{intrestAmount | currency : 'INR'}}2</td>
+
+                                    </ng-template>
+
                                 </tr>
                             </tbody>
                         </table>
