--- a/gold-admin-frontend/src/styles.scss
+++ b/gold-admin-frontend/src/styles.scss
@@ -518,14 +518,14 @@ mat-header-row {
 	min-width: 0;
 }
 
-.green{
+.text-green {
 	color: #8ddb5d !important;
-    text-transform: capitalize;
 }
 
-.red{
+.text-red {
 	color: #ff7272 !important;
 }
-.pending{
-	color: rgb(248, 177, 80) !important;
+
+.text-orange {
+	color: #f8b150 !important;
 }
