--- a/gold-admin-frontend/src/app/views/pages/emi-management/order-management/deposit-details/deposit-details-list/deposit-details-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/order-management/deposit-details/deposit-details-list/deposit-details-list.component.html
@@ -152,8 +152,9 @@
                 </ng-container>
                 <ng-container matColumnDef="orderStatus">
                     <mat-header-cell *matHeaderCellDef>Order Status</mat-header-cell>
-                    <mat-cell *matCellDef="let element">
-                        {{element?.order?.orderCurrentStatus?.statusName ? element?.order?.orderCurrentStatus?.statusName : '-'}}
+                    <mat-cell *matCellDef="let element"
+                        [ngClass]="{'text-green' : element?.order?.orderCurrentStatus?.id == 3}">
+                        {{element?.order?.orderCurrentStatus?.statusName ? (element?.order?.orderCurrentStatus?.statusName | titlecase) : '-'}}
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="productType">
