--- a/gold-admin-frontend/src/app/views/pages/loan-management/applied-loan/applied-loan.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/applied-loan/applied-loan.component.html
@@ -2,7 +2,7 @@
 
     <kt-portlet-body>
 
-        <div class="mat-table__wrapper" [ngStyle]="{'overflow-x':'hidden'}">
+        <div class="mat-table__wrapper">
             <mat-table class="lmat-elevation-z8" #table [dataSource]="dataSource">
 
                 <ng-container matColumnDef="fullName">
@@ -54,6 +54,14 @@
                         </span>
                     </mat-cell>
                 </ng-container>
+                <ng-container matColumnDef="loanStage">
+                    <mat-header-cell *matHeaderCellDef>Loan Stage</mat-header-cell>
+                    <mat-cell *matCellDef="let loan">
+                        <span class="text-primary">
+                            {{loan.loanStage.name | uppercase}}
+                        </span>
+                    </mat-cell>
+                </ng-container>
                 <ng-container matColumnDef="actions">
                     <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
                     <mat-cell *matCellDef="let loan"> 
@@ -65,9 +73,15 @@
                                     <img src="../../../../../assets/media/icons/action.svg" alt="">
                                 </div>
                             </div>
-                            <div *ngIf="loan.loanStatusForBM == 'approved' && roles == 'Appraiser'">
+                            <div *ngIf="loan.loanStage.id == 3">
                                 <div class="kt-pointer" (click)="packageImageUpload(loan)" class="kt-pointer" >
                                     <img src="../../../../../assets/media/icons/action.svg" alt="">
+                                </div>
+                            </div>
+                            <div *ngIf="loan.loanStage.id == 4">
+                                <div class="kt-pointer" class="kt-pointer" >
+                                    <button (click)="disburse(loan)" class="apply-kyc">Disburse</button>
+                                    
                                 </div>
                             </div>
                             
